--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sliding Bar Example</title>
+    <title>Sensitivity Covnerter</title>
  <style>
-        /* General styles */
         body {
             font-family: Arial, sans-serif;
             display: flex;
@@ -27,8 +26,6 @@
             width: 50%;
             height: 100%;
         }
-
-        /* Centering input boxes and labels */
         .input-container {
             display: flex;
             flex-direction: column;
@@ -56,7 +53,6 @@
             margin: 0 auto;
         }
 
-        /* Rest of the styles remain unchanged */
         .slider-container {
             width: 100%;
             text-align: center;
