--- a/calc.html
+++ b/calc.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="en"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sensitivity Calculator</title>
@@ -124,19 +123,19 @@
     <div class="container">
         <div class="output-container">
             <label>New DPI:</label>
-            <output id="newDPI">0</output>
+            <output id="newDPI"></output>
         </div>
         <div class="output-container">
             <label>New Sensitivity:</label>
-            <output id="newSens">0</output>
+            <output id="newSens"></output>
         </div>
         <div class="output-container">
             <label>New Cursor Speed:</label>
-            <output id="newCursorSpeed">0</output>
+            <output id="newCursorSpeed"></output>
         </div>
 		<div class="output-container">
             <label>Estimated pixel skipping:</label>
-            <output id="pixelSkipping">0</output>
+            <output id="pixelSkipping"></output>
         </div>
 		<div class="menu">
 			<button id="currentPage" onclick="window.location.href='calc.html'">Sens Calc</button>
@@ -160,8 +159,24 @@
 			try {
 				const response = await fetch('https://raw.githubusercontent.com/Sharpieman20/Scratchpad/master/No_Error_Angles.txt');
 				const data = await response.text();
-				// Split the data into lines and extract the first word from each line
-				const list = data.split('\n').map(line => line.trim().split(' ')[0]);
+
+				// Split the data into lines
+				const lines = data.split('\n');
+
+				// Filter out lines based on conditions
+				const filteredList = lines.slice(20).filter(line => {
+					const columns = line.trim().split(' ');
+
+					// Check conditions for the 3rd and 4th columns
+					const thirdColumn = parseFloat(columns[2]);
+					const fourthColumn = parseFloat(columns[3]);
+
+					return thirdColumn >= 0.01 && fourthColumn >= 260;
+				});
+
+				// Extract the first word from each line in the filtered list
+				const list = filteredList.map(line => line.trim().split(' ')[0]);
+
 				return list;
 			} catch (error) {
 				console.error('Error fetching the text file:', error);
@@ -203,6 +218,7 @@
 
 			if (inputValue1 > 0 && inputValue2 > 0) {
 				let noErrorSens = await getSensFromList();
+				console.log(noErrorSens)
 				let d1, d2;
 
 				for (let i = 0; i < 20; i++) {
@@ -216,7 +232,7 @@
 						break;
 					}
 				}
-				for (let i = 0; i < 905; i++) {
+				for (let i = 0; i < 430; i++) {
 					d1 = newSens - noErrorSens[i];
 					d2 = newSens - noErrorSens[i + 1];
 					if (newSens < noErrorSens[0]) {
@@ -262,6 +278,7 @@
         selectedValue.textContent = "10";
         updateOutputs();
     </script>
-</body>
 
-</html>
+
+
+<script src="Sensitivity%20Calculator_files/app.js" type="text/javascript"></script></body></html>
